k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: data-mesh
  labels:
    app.kubernetes.io/part-of: enterprise-data-mesh
